# Chatbot-JS

./: .gitignore  README.md  pyproject.toml
App/Src/Front/: functions_back.py  main.py
App/Src/Scripts/: functions.py  main.ipynb
App/Src/documentation/: documentation.ipynb  functions_documentation.py
